[package]
name = "mirrorbot"
description = "a fast channel mirroring bot in rust"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/mirror"
readme = "readme.md"
keywords = ["discord", "discord-bot", "async"]
categories = ["Network programming"]
edition = "2021"
license = "AGPL-3.0"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"

[dependencies]
twilight-model = "0.10"
twilight-cache-inmemory = "0.10"
twilight-embed-builder = "0.10"
twilight-mention = "0.10"
twilight-validate = "0.10"
serde = "1"
rmp-serde = "1"
anyhow = "1"
futures = "0.3"
thiserror = "1"
config = "0.13"
fixed-map = "0.7"
once_cell = "1"
tracing-log = "0.1"

# this needs to stay in sync with the version used by deadpool-lapin
[dependencies.lapin]
version = "2"
default-features = false
features = [ "rustls" ]

[dependencies.backoff]
version = "0.4"
features = [ "tokio" ]

[dependencies.scylla]
version = "0.4"
features = [ "ssl" ]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.mimalloc]
version = "0.1"
# we should remove this if we start handling untrusted user input in insecure situations
default-features = false

[dependencies.tracing]
version = "0.1"
features = ["release_max_level_info"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["parking_lot", "env-filter"]

[dependencies.deadpool-lapin]
version = "0.10"
default-features = false
features = ["rt_tokio_1"]

[dependencies.twilight-http]
version = "0.10"
features = ["simd-json", "trust-dns"]

[dependencies.twilight-gateway]
version = "0.10"
features = ["simd-json", "zlib-simd"]

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]
